--- a/ui/package.json
+++ b/ui/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "history": "^1.17.0",
+    "moment": "^2.10.6",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
     "react-router": "^1.0.3"
