--- a/ui/package.json
+++ b/ui/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-polyfill": "^6.3.14",
     "history": "^1.17.0",
     "moment": "^2.10.6",
     "react": "^0.14.3",
