--- a/api/package.json
+++ b/api/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "body-parser": "^1.14.2",
+    "cors": "^2.7.1",
     "express": "^4.13.3",
     "jsonwebtoken": "^5.4.1",
     "mongoose": "^4.3.4",
