--- a/ui/package.json
+++ b/ui/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "NODE_ENV=development node server.js",
+    "start": "NODE_ENV=development node server.dev.js",
     "deploy": "NODE_ENV=production webpack -p --config webpack.production.config.js && node server.prod.js"
   },
   "author": "",
