--- a/api/package.json
+++ b/api/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --exec babel-node app.js"
+    "test": "find ./src -name '*.test.js' | xargs mocha --require babel-core/register",
+    "start": "nodemon --exec babel-node src/app.js"
   },
   "author": "",
   "license": "ISC",
@@ -14,6 +14,8 @@
     "babel-core": "^6.3.21",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
+    "chai": "^3.4.1",
+    "mocha": "^2.3.4",
     "nodemon": "^1.8.1"
   },
   "dependencies": {
@@ -23,6 +25,7 @@
     "jsonwebtoken": "^5.4.1",
     "lodash": "^3.10.1",
     "mongoose": "^4.3.4",
-    "morgan": "^1.6.1"
+    "morgan": "^1.6.1",
+    "socket.io": "^1.4.2"
   }
 }
