--- a/ui/package.json
+++ b/ui/package.json
@@ -16,7 +16,8 @@
     "moment": "^2.10.6",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
-    "react-router": "^1.0.3"
+    "react-router": "^1.0.3",
+    "socket.io-client": "^1.4.2"
   },
   "devDependencies": {
     "babel-core": "^6.3.26",
