--- a/api/package.json
+++ b/api/package.json
@@ -26,6 +26,7 @@
     "lodash": "^3.10.1",
     "mongoose": "^4.3.4",
     "morgan": "^1.6.1",
+    "node-schedule": "^0.6.0",
     "socket.io": "^1.4.2"
   }
 }
