--- a/ui/package.json
+++ b/ui/package.json
@@ -15,6 +15,8 @@
     "history": "^1.17.0",
     "moment": "^2.10.6",
     "react": "^0.14.3",
+    "react-color": "^1.3.6",
+    "react-day-picker": "^1.2.0",
     "react-dom": "^0.14.3",
     "react-router": "^1.0.3",
     "socket.io-client": "^1.4.2"
