--- a/ui/package.json
+++ b/ui/package.json
@@ -13,12 +13,14 @@
   "dependencies": {
     "babel-polyfill": "^6.3.14",
     "history": "^1.17.0",
+    "material-ui": "^0.14.4",
     "moment": "^2.10.6",
     "react": "^0.14.3",
     "react-color": "^1.3.6",
     "react-day-picker": "^1.2.0",
     "react-dom": "^0.14.3",
     "react-router": "^1.0.3",
+    "react-tap-event-plugin": "^0.2.2",
     "socket.io-client": "^1.4.2"
   },
   "devDependencies": {
