--- a/ui/package.json
+++ b/ui/package.json
@@ -19,16 +19,23 @@
     "react-color": "^1.3.6",
     "react-day-picker": "^1.2.0",
     "react-dom": "^0.14.3",
-    "react-router": "^1.0.3",
+    "react-redux": "^4.4.1",
+    "react-router": "^2.0.1",
+    "react-router-redux": "^4.0.1",
     "react-tap-event-plugin": "^0.2.2",
+    "redux": "^3.3.1",
+    "redux-thunk": "^2.0.1",
     "socket.io-client": "^1.4.2"
   },
   "devDependencies": {
     "babel-core": "^6.3.26",
+    "babel-eslint": "^6.0.0-beta.6",
     "babel-loader": "^6.2.0",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
+    "eslint": "^2.4.0",
+    "eslint-plugin-react": "^4.2.3",
     "react-hot-loader": "^1.3.0",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.0"
