--- a/ui/package.json
+++ b/ui/package.json
@@ -1,43 +1,22 @@
 {
-  "name": "rater-ui",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "NODE_ENV=development node server.dev.js",
-    "deploy": "NODE_ENV=production webpack -p --config webpack.production.config.js && node server.prod.js"
-  },
-  "author": "",
-  "license": "ISC",
+  "name": "cra-ui",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "babel-polyfill": "^6.3.14",
-    "history": "^1.17.0",
-    "material-ui": "^0.14.4",
-    "moment": "^2.10.6",
+    "babel-polyfill": "^6.26.0",
+    "material-ui": "^0.20.0",
+    "moment": "^2.20.1",
+    "query-string": "^5.0.1",
     "react": "^16.2.0",
-    "react-color": "^1.3.6",
-    "react-day-picker": "^1.2.0",
+    "react-color": "^2.13.8",
     "react-dom": "^16.2.0",
-    "react-redux": "^4.4.1",
-    "react-router": "^2.0.1",
-    "react-router-redux": "^4.0.1",
-    "react-tap-event-plugin": "^0.2.2",
-    "redux": "^3.3.1",
-    "redux-thunk": "^2.0.1",
-    "socket.io-client": "^1.4.2"
+    "react-router-dom": "^4.2.2",
+    "react-scripts": "1.0.17"
   },
-  "devDependencies": {
-    "babel-core": "^6.3.26",
-    "babel-eslint": "^6.0.0-beta.6",
-    "babel-loader": "^6.2.0",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-preset-react": "^6.3.13",
-    "babel-preset-stage-0": "^6.3.13",
-    "eslint": "^2.4.0",
-    "eslint-plugin-react": "^4.2.3",
-    "react-hot-loader": "^1.3.0",
-    "webpack": "^1.12.9",
-    "webpack-dev-server": "^1.14.0"
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   }
 }
