--- a/ui/package.json
+++ b/ui/package.json
@@ -11,7 +11,8 @@
     "react-color": "^2.13.8",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.0.17"
+    "react-scripts": "1.0.17",
+    "socket.io-client": "^2.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
