--- a/ui/package.json
+++ b/ui/package.json
@@ -10,6 +10,7 @@
     "react": "^16.2.0",
     "react-color": "^2.13.8",
     "react-dom": "^16.2.0",
+    "react-pin-input": "^0.6.5",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
     "socket.io-client": "^2.0.4"
