--- a/ui/package.json
+++ b/ui/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "cra-ui",
+  "name": "rater-ui",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://alex-wilmer.github.io/rater",
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "material-ui": "^0.20.0",
@@ -19,6 +20,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   }
 }
